[gd_scene load_steps=19 format=3 uid="uid://bg1md3rc8cto0"]

[ext_resource type="Script" path="res://components/enemy/enemy_behaviour.gd" id="1_ery85"]
[ext_resource type="SpriteFrames" uid="uid://w4tfj2yjtydd" path="res://components/enemy/enemy_sprites.tres" id="1_u4apu"]
[ext_resource type="Script" path="res://components/enemy/enemy_helper_tool.gd" id="3_m0o5n"]
[ext_resource type="Script" path="res://components/scripts/y_sort.gd" id="3_rphul"]
[ext_resource type="Texture2D" uid="uid://cuhsmek8br7a5" path="res://art/exclamationmark-spotted.png" id="4_woul6"]
[ext_resource type="Script" path="res://components/enemy/spotted_icon.gd" id="5_kkgiw"]
[ext_resource type="Script" path="res://components/enemy/dialogue_text.gd" id="6_6v5x5"]
[ext_resource type="Texture2D" uid="uid://dft7ra5h375xm" path="res://art/particles/steam.png" id="7_4xj31"]
[ext_resource type="Script" path="res://components/enemy/dialogue.gd" id="8_l6exa"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2e1cs"]
radius = 8.0

[sub_resource type="Resource" id="Resource_uk1fp"]
script = ExtResource("8_l6exa")
dialogue = "Must've been my imagination"
voice_line = "guardstun1"

[sub_resource type="Resource" id="Resource_xolpa"]
script = ExtResource("8_l6exa")
dialogue = "Must've been the wind"
voice_line = "guardstun2"

[sub_resource type="Resource" id="Resource_pvt45"]
script = ExtResource("8_l6exa")
dialogue = "I'm sure it's nothing"
voice_line = "guardstun3"

[sub_resource type="Resource" id="Resource_40g62"]
script = ExtResource("8_l6exa")
dialogue = "I hate this job"
voice_line = "guardstun4"

[sub_resource type="Resource" id="Resource_7v60a"]
script = ExtResource("8_l6exa")
dialogue = "Guh..."
voice_line = "guardstun5"

[sub_resource type="Resource" id="Resource_ggimg"]
script = ExtResource("8_l6exa")
dialogue = "Guh..."
voice_line = "guardstun6"

[sub_resource type="Resource" id="Resource_q73og"]
script = ExtResource("8_l6exa")
dialogue = "They don't pay me enough for this..."
voice_line = "guardstun7"

[sub_resource type="Gradient" id="Gradient_f8hxe"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = 60
z_as_relative = false
collision_layer = 4
collision_mask = 18
script = ExtResource("1_ery85")
turn_positions = Array[float]([0.0, 90.0, 180.0, 270.0])
detection_angle = 15.0

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
z_index = 60
z_as_relative = false
position = Vector2(0, -8)
sprite_frames = ExtResource("1_u4apu")
autoplay = "default"

[node name="YSort" type="Node2D" parent="Sprite2D" node_paths=PackedStringArray("target")]
position = Vector2(0, 4)
script = ExtResource("3_rphul")
target = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2e1cs")

[node name="WallCheck" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, -40)
collision_mask = 18

[node name="PlayerCheckGroup" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EnemyHelper" type="Node2D" parent="." node_paths=PackedStringArray("enemy")]
script = ExtResource("3_m0o5n")
enemy = NodePath("..")

[node name="LightPoly" type="Polygon2D" parent="."]
unique_name_in_owner = true
z_index = -40
z_as_relative = false
color = Color(1, 0, 0, 0.25098)
invert_border = 0.1

[node name="SpottedIcon" type="Sprite2D" parent="."]
unique_name_in_owner = true
top_level = true
z_index = 1000
texture = ExtResource("4_woul6")
script = ExtResource("5_kkgiw")

[node name="DialogueText" type="Label" parent="." node_paths=PackedStringArray("dialogue_pos")]
unique_name_in_owner = true
top_level = true
z_index = 900
z_as_relative = false
offset_right = 170.0
offset_bottom = 43.0
scale = Vector2(0.325, 0.325)
autowrap_mode = 2
script = ExtResource("6_6v5x5")
dialogue_pos = NodePath("..")
forget_dialogues = Array[String](["Must have been my imagination", "I'm sure it's nothing", "I hate this job", "Guh..."])
forget_dialogue = Array[ExtResource("8_l6exa")]([SubResource("Resource_uk1fp"), SubResource("Resource_xolpa"), SubResource("Resource_pvt45"), SubResource("Resource_40g62"), SubResource("Resource_7v60a"), SubResource("Resource_ggimg"), SubResource("Resource_q73og")])

[node name="SmokeParticle" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.392157)
z_index = -61
emitting = false
amount = 4
lifetime = 0.5
fixed_fps = 30
draw_order = 1
texture = ExtResource("7_4xj31")
emission_shape = 3
emission_rect_extents = Vector2(4, 5)
direction = Vector2(0, -1)
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 60.0
angle_min = -465.2
angle_max = 1.07288e-05
color_ramp = SubResource("Gradient_f8hxe")
